k8s/httproutes/auth-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: auth-route
  namespace: sales-test-ns
spec:
  parentRefs:
    - name: sales-gateway
      namespace: sales-gateway-ns
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/auth
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /auth
      backendRefs:
        - name: auth-service
          port: 3000
