k8s/httproutes/order-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute 
metadata:
  name: order-route
  namespace: sales-test-ns
spec:
  parentRefs:
  - name: sales-gateway
    namespace: sales-gateway-ns
  rules:
  - matches:
    - path: 
        type: PathPrefix
        value: /api/orders
    filters:
    - type: URLRewrite
      urlRewrite:
        path:
          type: ReplacePrefixMatch
          replacePrefixMatch: /orders
    backendRefs:
    - name: order-service
      port: 3000
